--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py36, py37, py38, cov, cov_local
 deps=
     pytest
     aresponses
+    mock
 commands=pytest
 
 [testenv:cov]
@@ -12,6 +13,7 @@ deps=
     pytest
     pytest-cov
     aresponses
+    mock
 commands=
     pytest --cov --cov-report= {posargs}
 
@@ -21,6 +23,7 @@ deps=
     pytest
     pytest-cov
     aresponses
+    mock
 commands=
     pytest --cov --cov-report=
     coverage report
