--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, cov, cov_local_37, cov_local_38
+envlist = py36, py37, py38, py39, cov, cov_local_38
 
 [testenv]
 deps=
@@ -16,18 +16,6 @@ deps=
     mock
 commands=
     pytest --cov --cov-report= {posargs}
-
-[testenv:cov_local_37]
-basepython=python3.7
-deps=
-    pytest
-    pytest-cov
-    aresponses
-    mock
-commands=
-    pytest --cov --cov-report=
-    coverage report
-    coverage html
 
 [testenv:cov_local_38]
 basepython=python3.8
