--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,6 @@
 [tool.black]
 target-version = ['py36', 'py37', 'py38']
+
+[tool.isort]
+profile = "black"
+src_paths = ["aio_geojson_geonetnz_quakes", "tests"]
