--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,55 @@
+[build-system]
+requires = [
+    "setuptools",
+    "wheel"
+]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "aio_geojson_geonetnz_quakes"
+version  = "0.16"
+requires-python = ">= 3.9"
+authors = [
+  {name = "Malte Franken", email = "coding@subspace.de"},
+]
+description = "An async GeoJSON client library for GeoNet NZ Quakes feed."
+readme = "README.md"
+license = {file = "LICENSE"}
+keywords = ["homeassistant", "geojson", "geonetnz", "earthquakes"]
+classifiers = [
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "License :: OSI Approved :: Apache Software License",
+  "Operating System :: OS Independent",
+  "Development Status :: 5 - Production/Stable",
+]
+dependencies = [
+    "aio_geojson_client>=0.20",
+    "aiohttp>=3.7.4,<4",
+    "pytz>=2019.01",
+]
+
+[project.optional-dependencies]
+tests = [
+    "pytest-asyncio",
+    "pytest-timeout",
+    "pytest-xdist",
+    "pytest-cov",
+    "coverage",
+    "mock",
+    "aioresponses",
+]
+
+[project.urls]
+Repository = "https://github.com/exxamalte/python-aio-geojson-geonetnz-quakes"
+Issues = "https://github.com/exxamalte/python-aio-geojson-geonetnz-quakes/issues"
+Changelog = "https://github.com/exxamalte/python-aio-geojson-geonetnz-quakes/blob/main/CHANGELOG.md"
+
+[tool.setuptools.packages.find]
+include = ["aio_geojson_geonetnz_quakes*"]
+
 [tool.ruff.lint]
 select = [
     "A001", # Variable {name} is shadowing a Python builtin
